--- a/Aboutme/app/src/main/AndroidManifest.xml
+++ b/Aboutme/app/src/main/AndroidManifest.xml
@@ -4,11 +4,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Settings"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".AdditionalInfo"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".InviteActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
