--- a/Aboutme/app/src/main/AndroidManifest.xml
+++ b/Aboutme/app/src/main/AndroidManifest.xml
@@ -11,14 +11,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Settings"
+        <activity android:name=".SettingsActivity"
             android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".AdditionalInfo"
+        <activity android:name=".AdditionalInfoActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".ShortInfoActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
