--- a/Aboutme/app/src/main/AndroidManifest.xml
+++ b/Aboutme/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="iv.nakonechnyi.fileprovider"
+            android:authorities="iv.nakonechnyi.aboutme.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
