--- a/Aboutme/app/build.gradle
+++ b/Aboutme/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.recyclerview:recyclerview-selection:1.0.0"
+
 
     // Add the Crashlytics NDK dependency
     implementation 'com.crashlytics.sdk.android:crashlytics-ndk:2.1.1'
