--- a/NewsFeeder/app/build.gradle
+++ b/NewsFeeder/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+
+apply plugin: 'io.fabric'
+
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -41,7 +46,12 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
-    implementation 'androidx.preference:preference:1.1.0-alpha05'
+    implementation 'androidx.preference:preference:1.1.0'
+
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
