--- a/NewsFeeder/app/src/main/AndroidManifest.xml
+++ b/NewsFeeder/app/src/main/AndroidManifest.xml
@@ -22,18 +22,21 @@
         </activity>
         <activity
             android:name=".NewsActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:launchMode="singleTask">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="iv.nakonechnyi.newsfeeder.MainActivity" />
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NewsPagerActivity" />
     </application>
 
 </manifest>
