--- a/NewsFeeder/app/src/main/AndroidManifest.xml
+++ b/NewsFeeder/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
-<!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
+    <!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<!--    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />-->
+    <!--    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />-->
 
     <application
         android:allowBackup="true"
@@ -20,18 +20,6 @@
         android:roundIcon="@drawable/rss"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
-<!--        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />-->
 
         <service
             android:name=".NewsService"
@@ -56,12 +44,7 @@
         </activity>
         <activity
             android:name=".NewsPagerActivity"
-            android:launchMode="singleTask"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="iv.nakonechnyi.newsfeeder.MainActivity" />
-        </activity>
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
